Fix minus svg vertical alignment

--- a/src/main/content/javadocs/microprofile-1.2-javadoc/stylesheet.css
+++ b/src/main/content/javadocs/microprofile-1.2-javadoc/stylesheet.css
@@ -971,14 +971,15 @@ table.striped > tbody > tr > td, table.striped > tbody > tr > td {
 
 /* Custom expand/collapse button */
 input[type='checkbox'] + label:before {
-    /* content: "+"; */
     content:url('/img/all_guides_plus.svg');
     font-family: BunueloLight;
     margin-right: 10px;
 }
 
+input[type='checkbox']:checked + label {
+    margin-top: -3px;
+}
 input[type='checkbox']:checked + label:before {
-    /* content: "-"; */
     content:url('/img/all_guides_minus.svg');
 }
 input[type='checkbox'] {
